; ModuleID = '/home/carl/AnghaBench/redis/src/extr_rax.c_raxReallocForData.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_rax.c_raxReallocForData.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @raxReallocForData(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = icmp eq i8* %7, null
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i32*, i32** %4, align 8
  store i32* %10, i32** %3, align 8
  br label %19

11:                                               ; preds = %2
  %12 = load i32*, i32** %4, align 8
  %13 = call i64 @raxNodeCurrentLength(i32* %12)
  store i64 %13, i64* %6, align 8
  %14 = load i32*, i32** %4, align 8
  %15 = load i64, i64* %6, align 8
  %16 = add i64 %15, 8
  %17 = trunc i64 %16 to i32
  %18 = call i32* @rax_realloc(i32* %14, i32 %17)
  store i32* %18, i32** %3, align 8
  br label %19

19:                                               ; preds = %11, %9
  %20 = load i32*, i32** %3, align 8
  ret i32* %20
}

declare dso_local i64 @raxNodeCurrentLength(i32*) #1

declare dso_local i32* @rax_realloc(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
